demo_route/demo-route/base/app1-v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx1svc
  name: nginx1svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx1
