demo_route/demo-route/base/app1-v1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: paul1
  name: paulapp1
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: paulsvc1
